improved landing page

--- a/landing_page.html
+++ b/landing_page.html
@@ -68,7 +68,7 @@
                         <a href="#">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="First slide">
                             <div class="carousel-caption d-md-block">
-                                <h2>Auction Title</h2>
+                                <h2>Some Item</h2>
                                 <p>15$, 5 bids</p>
                             </div>
                         </a>
@@ -77,7 +77,7 @@
                         <a href="#">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
-                                <h2>Auction Title</h2>
+                                <h2>Another Newish Item</h2>
                                 <p>15$, 5 bids</p>
                             </div>
                         </a>
@@ -105,9 +105,9 @@
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">Red Toyota car</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
-                                <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
+                                <p class="card-text">The fastest car around, the 10 year old toyota legend which still holds numerous records ...</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
@@ -118,7 +118,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">Grey Camera</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -131,7 +131,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">Samsung Tablet</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -144,7 +144,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">Pixel X2 4GB</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -157,7 +157,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">toyota motorcycle</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -170,7 +170,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some other new item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -194,9 +194,9 @@
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">brand new headphones</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
-                                <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
+                                <p class="card-text">A brand new headphone, only for the low low price of 5001$</p>
                                 <p class="card-text">
                                     <small class="text-muted">Ending in 15 mins</small>
                                 </p>
@@ -207,7 +207,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -220,7 +220,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -233,7 +233,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -246,7 +246,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
@@ -259,7 +259,7 @@
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
-                                <h3 class="card-title">Auction Title</h3>
+                                <h3 class="card-title">some item</h3>
                                 <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text">
