improved header more

--- a/landing_page.html
+++ b/landing_page.html
@@ -30,7 +30,7 @@
             <form class="px-2" id="search-bar">
                 <div class="d-flex">
                     <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                    <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
+                    <select class="form-control rounded-0 col-2 " id="search-categories">
                         <option selected> All Categories </option>
                         <option>Technology</option>
                         <option>Automobiles</option>
@@ -54,7 +54,6 @@
                     </li>
                 </ul>
             </div>  
-
         </nav>
         
         <div class="container">
