--- a/register.html
+++ b/register.html
@@ -17,36 +17,43 @@
         <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         <!-- links -->
         <link rel="stylesheet" href="css/authentication.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/footer.css">
     </head>
     <body>
         <!-- header -->
-        <nav class="navbar navbar-expand-sm navbar-light bg-light ">
-            <a class="navbar-brand" href="#">BidBay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto justify-content-end" id="authentication-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
+                <!-- logo -->
+                <a href="#" class="navbar-brand">BidBay</a>
+                <!-- search bar -->
+                <form class="px-2" id="search-bar">
+                    <div class="d-flex">
+                        <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                        <select class="form-control rounded-0 col-2 " id="search-categories">
+                            <option selected> All Categories </option>
+                            <option>Technology</option>
+                            <option>Automobiles</option>
+                            <option>Clothes</option>
+                        </select>
+                        <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+                    </div>
+                </form>
+                <!-- mobile authentication button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- authentication links -->
+                <div class="navbar-collapse collapse justify-content-end" id="authentication">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-right" href="#">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-right" href="#">Register</a>
+                        </li>
+                    </ul>
+                </div>  
+            </nav>
 
         
         <!-- Register Form -->
