--- a/landing_page.html
+++ b/landing_page.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
     </head>
-    <body>
+    <body class="website-body">
 
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
@@ -56,7 +56,7 @@
             </div>  
         </nav>
         
-        <div class="container">
+        <div class="container mb-5">
 
             <!-- auctions carousel -->
             <!-- these could be just random auctions in the system -->
@@ -273,7 +273,7 @@
         </div>
 
         <!-- footer -->
-        <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0 mt-5" id="footer">
+        <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
             <ul class="nav d-flex justify-content-center">
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="#">Home </a>
