--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
     </head>
-    <body>
+    <body class="website-body">
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
                 <!-- logo -->
@@ -83,11 +83,23 @@
             
 
         <!-- footer -->
-        <!-- class fixed-bottom is placed is 'stickied' to bottom of screen -->
-        <nav class="navbar text-white bg-dark mt-5">
-            <ul class="nav navbar-nav mx-auto">
-                Website created by group 64 for LBAW
-            </ul>
-        </nav>
+        <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
+                <ul class="nav d-flex justify-content-center">
+                    <li class="nav-item active">
+                        <a class="nav-link text-white" href="#">Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">FAQ</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
+                    <li class="nav-item">
+                        <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+                    </li>
+                </ul>
+            </nav>
     </body>
 </html>
