--- a/profile_page.html
+++ b/profile_page.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><!doctype html>
-        <html lang="en">
-        <head>
-            <title>Landing Page</title>
+    <title>Profile</title>
             <!-- Required meta tags -->
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,52 +18,52 @@
             <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
             <!-- links -->
             <link rel="stylesheet" href="css/profile.css">
+            <link rel="stylesheet" href="css/header.css">
+            <link rel="stylesheet" href="css/footer.css">
         </head>
 <body>
 <!-- header -->
-<nav class="navbar navbar-expand-sm navbar-light bg-light ">
-    <a class="navbar-brand" href="#">BidBay</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav ml-auto justify-content-end" id="authentication-nav">
-            <li class="nav-item">
-                <div class="dropdown show">
-                    <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Hi MrBurns001
-                    </a>
-
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="#">View Profile</a>
-                        <a class="dropdown-item" href="#">View Messages</a>
-                        <a class="dropdown-item" href="#">Log out</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+<nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
+    <!-- logo -->
+    <a href="#" class="navbar-brand extra-hide">BidBay</a>
+    <!-- search bar -->
+    <form class="px-2" id="search-bar">
+        <div class="d-flex">
+            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+            <select class="form-control rounded-0 col-2 " id="search-categories">
+                <option selected> All Categories </option>
+                <option>Technology</option>
+                <option>Automobiles</option>
+                <option>Clothes</option>
+            </select>
+            <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+        </div>
+    </form>
+    <!-- authentication links -->
+    <div class="dropdown" id="authentication">
+        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
+            JohnDoe39012
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
+            <a class="dropdown-item" href="#">View Profile</a>
+            <a class="dropdown-item" href="#">View Messages</a>
+            <a class="dropdown-item" href="#">Log out</a>
+        </div>
     </div>
 </nav>
 
 <!-- profile -->
 <div class="container" id="product-section">
     <div class="row">
-        <div class="col-md-6">
-            <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg"
-                 alt="Picture" style="width:50%">
+        <div class="col-md-3">
+
         </div>
-        <div class="col-md-6">
+        <div class="col-md-3">
+            <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg"
+                 alt="Picture" style="width:100%">
+        </div>
+        <div class="col-md-3">
             <div class="row">
                 <h1>Mr. Burns</h1>
             </div>
