--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <form class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-            <select class="form-control rounded-0 col-2 " id="search-categories">
+            <label for="search-categories"></label><select class="form-control rounded-0 col-2 " id="search-categories">
                 <option selected> All Categories </option>
                 <option>Technology</option>
                 <option>Automobiles</option>
@@ -54,8 +54,13 @@
 
 <div class="container">
 
-    <h3 class="border-bottom pb-1 mb-4 mt-5">About BidBay </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores assumenda earum est ipsa iste minima quae repellendus reprehenderit, sequi tempora voluptatem voluptates. Dolor ducimus facilis iusto pariatur, repellendus voluptas!</p>
+    <video width="1000" height="600" autoplay>
+        <source src="media/commercial.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+
+    <h3 class="border-bottom pb-1 mb-4">About BidBay </h3>
+    <p>BidBay is a website where users can do all of their shopping (new, second hand, handcrafted or miscellaneous items) where the seller is another user like them. Do you have something you want to sell? Want something from our users? Start your selling and shopping here, at BidBay! </p>
 
     <h4 class="border-bottom pb-1 mb-4 mt-5">About the Team </h4>
     <p>Afonso Pinto</p>
@@ -63,11 +68,7 @@
     <p>Rostyslav Khoptiy</p>
     <p>Tomás Oliveira</p>
 
-    <video width="400" controls>
-        <source src="mov_bbb.mp4" type="video/mp4">
-        <source src="mov_bbb.ogg" type="video/ogg">
-        Your browser does not support HTML5 video.
-    </video>
+
 </div>
 <!-- footer -->
 <!-- class fixed-bottom is placed is 'stickied' to bottom of screen -->
@@ -76,10 +77,5 @@
         Website created by group 64 for LBAW
     </ul>
 </nav>
-</body>
-</html></title>
-</head>
-<body>
-
 </body>
 </html>
