--- a/FAQ.html
+++ b/FAQ.html
@@ -23,9 +23,9 @@
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
                 <!-- logo -->
-                <a href="#" class="navbar-brand extra-hide">BidBay</a>
+                <a href="landing_page.html" class="navbar-brand extra-hide">BidBay</a>
                 <!-- search bar -->
-                <form class="px-2" id="search-bar">
+                <form action="search.html" method="get" class="px-2" id="search-bar">
                     <div class="d-flex">
                         <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
                         <select class="form-control rounded-0 col-2 " id="search-categories">
@@ -44,8 +44,8 @@
                          JohnDoe39012
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
-                        <a class="dropdown-item" href="#">View Profile</a>
-                        <a class="dropdown-item" href="#">View Messages</a>
+                        <a class="dropdown-item" href="profile_page.html">View Profile</a>
+                        <a class="dropdown-item" href="chat.html">View Messages</a>
                         <a class="dropdown-item" href="#">Log out</a>
                     </div>
                 </div>  
@@ -128,22 +128,22 @@
 
         <!-- footer -->
         <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
-                <ul class="nav d-flex justify-content-center">
-                    <li class="nav-item active">
-                        <a class="nav-link text-white" href="#">Home </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">FAQ</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
-                    <li class="nav-item">
-                        <span class="align-middle text-white">Website created by group 64 for LBAW</span>
-                    </li>
-                </ul>
-            </nav>
+            <ul class="nav d-flex justify-content-center">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="landing_page.html">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="FAQ.html">FAQ</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
+                <li class="nav-item">
+                    <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
