--- a/landing_page.html
+++ b/landing_page.html
@@ -25,9 +25,9 @@
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
             <!-- logo -->
-            <a href="#" class="navbar-brand">BidBay</a>
+            <a href="landing_page.html" class="navbar-brand">BidBay</a>
             <!-- search bar -->
-            <form class="px-2" id="search-bar">
+            <form action="search.html" method="get" class="px-2" id="search-bar">
                 <div class="d-flex">
                     <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
                     <select class="form-control rounded-0 col-2 " id="search-categories">
@@ -47,10 +47,10 @@
             <div class="navbar-collapse collapse justify-content-end" id="authentication">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-right" href="#">Login</a>
+                        <a class="nav-link text-right" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-right" href="#">Register</a>
+                        <a class="nav-link text-right" href="register.html">Register</a>
                     </li>
                 </ul>
             </div>  
@@ -64,7 +64,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                        <a href="#">
+                        <a href="product.html">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="First slide">
                             <div class="carousel-caption d-md-block">
                                 <h2>Some Item</h2>
@@ -73,7 +73,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h2>Another Newish Item</h2>
@@ -99,7 +99,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -114,7 +114,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Grey Camera</h3>
@@ -127,7 +127,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Samsung Tablet</h3>
@@ -140,7 +140,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Pixel X2 4GB</h3>
@@ -153,7 +153,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">toyota motorcycle</h3>
@@ -166,7 +166,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some other new item</h3>
@@ -188,7 +188,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -203,7 +203,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -216,7 +216,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -229,7 +229,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -242,7 +242,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -255,7 +255,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="#">
+                        <a href="product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -276,13 +276,13 @@
         <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
             <ul class="nav d-flex justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">Home </a>
+                    <a class="nav-link text-white" href="landing_page.html">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">About</a>
+                    <a class="nav-link text-white" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">FAQ</a>
+                    <a class="nav-link text-white" href="FAQ.html">FAQ</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
