--- a/register.html
+++ b/register.html
@@ -23,37 +23,37 @@
     <body class="website-body">
         <!-- header -->
         <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
-                <!-- logo -->
-                <a href="#" class="navbar-brand">BidBay</a>
-                <!-- search bar -->
-                <form class="px-2" id="search-bar">
-                    <div class="d-flex">
-                        <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                        <select class="form-control rounded-0 col-2 " id="search-categories">
-                            <option selected> All Categories </option>
-                            <option>Technology</option>
-                            <option>Automobiles</option>
-                            <option>Clothes</option>
-                        </select>
-                        <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
-                    </div>
-                </form>
-                <!-- mobile authentication button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- authentication links -->
-                <div class="navbar-collapse collapse justify-content-end" id="authentication">
-                    <ul class="nav navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-right" href="#">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-right" href="#">Register</a>
-                        </li>
-                    </ul>
-                </div>  
-            </nav>
+            <!-- logo -->
+            <a href="landing_page.html" class="navbar-brand">BidBay</a>
+            <!-- search bar -->
+            <form action="search.html" method="get" class="px-2" id="search-bar">
+                <div class="d-flex">
+                    <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                    <select class="form-control rounded-0 col-2 " id="search-categories">
+                        <option selected> All Categories </option>
+                        <option>Technology</option>
+                        <option>Automobiles</option>
+                        <option>Clothes</option>
+                    </select>
+                    <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+            <!-- mobile authentication button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- authentication links -->
+            <div class="navbar-collapse collapse justify-content-end" id="authentication">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-right" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-right" href="register.html">Register</a>
+                    </li>
+                </ul>
+            </div>  
+        </nav>
 
         
         <!-- Register Form -->
@@ -84,22 +84,22 @@
 
         <!-- footer -->
         <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
-                <ul class="nav d-flex justify-content-center">
-                    <li class="nav-item active">
-                        <a class="nav-link text-white" href="#">Home </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">FAQ</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
-                    <li class="nav-item">
-                        <span class="align-middle text-white">Website created by group 64 for LBAW</span>
-                    </li>
-                </ul>
-            </nav>
+            <ul class="nav d-flex justify-content-center">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="landing_page.html">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="FAQ.html">FAQ</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
+                <li class="nav-item">
+                    <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
