--- a/landing_page.html
+++ b/landing_page.html
@@ -65,7 +65,7 @@
                     <div class="carousel-item active">
                         <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
                         <a href="product.html">
-                            <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="First slide">
+                            <img class="d-block " src="https://placeimg.com/400/300/tech" alt="First slide">
                             <div class="carousel-caption d-md-block">
                                 <h2>Some Item</h2>
                                 <p>15$, 5 bids</p>
@@ -74,7 +74,16 @@
                     </div>
                     <div class="carousel-item">
                         <a href="product.html">
-                            <img class="d-block w-100" src="https://placeimg.com/640/480/arch" alt="Second slide">
+                            <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
+                            <div class="carousel-caption d-md-block">
+                                <h2>Another Newish Item</h2>
+                                <p>15$, 5 bids</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="product.html">
+                            <img class="d-block " src="https://placeimg.com/1600/900/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h2>Another Newish Item</h2>
                                 <p>15$, 5 bids</p>
