--- a/product.html
+++ b/product.html
@@ -129,24 +129,30 @@
         </div>
     </div><!-- end row -->
 
-    <ul class="nav nav-tabs">
-        <li class="nav-item" class="active">
-            <a class="nav-link active" id="details-tab" data-toggle="tab" href="#details" role="tab"
-               aria-controls="details" aria-selected="true">Bid Details</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="shippingAndPayment-tab" data-toggle="tab" href="#shippingAndPayment" role="tab"
-               aria-controls="shippingAndPayment" aria-selected="true">Shipping and Payment</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="qa-tab" data-toggle="tab" href="#qa" role="tab" aria-controls="qa"
-               aria-selected="true">Q&A</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="review-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews"
-               aria-selected="true">Seller Reviews</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <ul class="nav nav-tabs">
+            <li class="nav-item" class="active">
+                <a class="nav-link active" id="details-tab" data-toggle="tab" href="#details" role="tab"
+                   aria-controls="details" aria-selected="true">Bid Details</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="shippingAndPayment-tab" data-toggle="tab" href="#shippingAndPayment" role="tab"
+                   aria-controls="shippingAndPayment" aria-selected="true">Shipping and Payment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="qa-tab" data-toggle="tab" href="#qa" role="tab" aria-controls="qa"
+                   aria-selected="true">Q&A</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="review-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews"
+                   aria-selected="true">Seller Reviews</a>
+            </li>
+        </ul>
+
+        <span class="navbar-text">
+          <a href="#" class="badge badge-light">Report Item</a>
+        </span>
+    </nav>
     <!-- Tab panes -->
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="details" role="tabpanel" aria-labelledby="details-tab">
@@ -240,6 +246,7 @@
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
                         <div class="review-block">Excellent seller, quick shipping A++++++</div>
+                        <a href="#" class="badge badge-light">Report Abuse</a>
                     </div>
                 </div>
             </div>
