add add to watch list interaction

--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -20,7 +20,7 @@
     <!-- fonts awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/footer.css">
 
 
 </head>
@@ -104,6 +104,7 @@
                     <span class="display-4">Dell XPS 15</span>
                     <span class="badge badge-primary">Tech</span>
                     <span class="badge badge-info">New</span>
+                    <a href="product.html" class="fas fa-star text-warning" aria-hidden="true"></a>
                 </div>
             </div><!-- end row-->
         </div>
@@ -173,7 +174,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Place Bid
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Add to Watchlist</a>
+                        <a class="dropdown-item" href="product.html">Remove from Watchlist</a>
                     </div>
                 </dt>
                 <dd class="col-sm-3">
