--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -22,14 +22,16 @@
 
     <link rel="stylesheet" href="../css/footer.css">
 
+    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 <body class="website-body">
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="#" class="navbar-brand">BidBay</a>
+    <a href="../landing_page.html" class="navbar-brand">BidBay</a>
     <!-- search bar -->
-    <form class="px-2" id="search-bar">
+    <form action="../search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -50,14 +52,15 @@
     <div class="navbar-collapse collapse justify-content-end" id="authentication">
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-right" href="#">Login</a>
+                <a class="nav-link text-right" href="../login.html">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-right" href="#">Register</a>
+                <a class="nav-link text-right" href="../register.html">Register</a>
             </li>
         </ul>
     </div>
 </nav>
+
 
 
 <div class="container" id="product-section">
@@ -262,17 +265,16 @@
 <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
     <ul class="nav d-flex justify-content-center">
         <li class="nav-item active">
-            <a class="nav-link text-white" href="#">Home </a>
+            <a class="nav-link text-white" href="../landing_page.html">Home </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">About</a>
+            <a class="nav-link text-white" href="../about.html">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">FAQ</a>
+            <a class="nav-link text-white" href="../FAQ.html">FAQ</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block"
-        id="authentication-nav">
+    <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
         <li class="nav-item">
             <span class="align-middle text-white">Website created by group 64 for LBAW</span>
         </li>
