--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="#" class="navbar-brand extra-hide">BidBay</a>
+    <a href="landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form class="px-2" id="search-bar">
+    <form action="search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <label for="search-categories"></label><select class="form-control rounded-0 col-2 " id="search-categories">
@@ -45,8 +45,8 @@
             JohnDoe39012
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="#">View Profile</a>
-            <a class="dropdown-item" href="#">View Messages</a>
+            <a class="dropdown-item" href="profile_page.html">View Profile</a>
+            <a class="dropdown-item" href="chat.html">View Messages</a>
             <a class="dropdown-item" href="#">Log out</a>
         </div>
     </div>
