--- a/search.html
+++ b/search.html
@@ -58,7 +58,7 @@
             
         <div class="container-fluid">
             <div class="row">                           
-                <div class="col-2" id="sidebar">                 
+                <div class="col-2  d-none d-sm-block d-xs-block" id="sidebar">                 
                     <div id="sidebar-wrapper" class="hidden-md-down">
                         <ul class="sidebar-nav ">
                             <div class="format">
