--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -20,7 +20,9 @@
     <!-- fonts awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/product.css">
 
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
 
@@ -114,10 +116,10 @@
 
         <div class="col-md-3">
             <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
+                <img class="card-img-top img-fluid" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
                      alt="Seller Image">
                 <div class="card-block">
-                    <h4 class="card-title">Seller Name</h4>
+                    <h4 class="card-title"><a href="#">Seller Name</a></h4>
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -237,8 +239,8 @@
             <div class="review-block">
                 <div class="row">
                     <div class="col-sm-3">
-                        <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
-                        <div class="review-block-name"><a href="#">MrBurns</a></div>
+                        <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg" class="img-review img-fluid">
+                        <div class="review-block-name"><a href="../profile_page.html">MrBurns</a></div>
                         <div class="review-block-date">March 01, 2018</div>
                     </div>
                     <div class="col-sm-9">
