add header with login and seller view

--- a/product/product_asSeller.html
+++ b/product/product_asSeller.html
@@ -30,6 +30,7 @@
 
 </head>
 <body class="website-body">
+<!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
     <a href="../landing_page.html" class="navbar-brand extra-hide">BidBay</a>
@@ -123,7 +124,8 @@
                     <span class="badge badge-success">61</span>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, consequatur
                         cupiditate dicta doloremque eligendi</p>
-                    <a href="#" class="btn btn-primary ">Contact</a>
+                    <a href="#" class="btn btn-primary ">Edit Auction</a>
+                    <a href="#" class="btn btn-danger ">Remove Auction</a>
                 </div>
             </div>
         </div>
@@ -148,10 +150,6 @@
                    aria-selected="true">Seller Reviews</a>
             </li>
         </ul>
-
-        <span class="navbar-text">
-          <a href="#" class="badge badge-light">Report Item</a>
-        </span>
     </nav>
     <!-- Tab panes -->
     <div class="tab-content" id="myTabContent">
@@ -166,26 +164,6 @@
                 <dt class="col-sm-3">Description</dt>
                 <dd class="col-sm-9">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
                     Gaming graphics Card.
-                </dd>
-
-                <dt class="col-sm-3">
-                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Place Bid
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="product_itemOnWatchList.html">Add to Watchlist</a>
-                    </div>
-                </dt>
-                <dd class="col-sm-3">
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">€</span>
-                        </div>
-                        <input type="text" class="form-control" aria-label="Amount (to the nearest euro)">
-                        <div class="input-group-append">
-                            <span class="input-group-text">.00</span>
-                        </div>
-                    </div>
                 </dd>
             </dl>
         </div>
