--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -29,16 +29,16 @@
 
 </head>
 <body class="website-body">
+<!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="../landing_page.html" class="navbar-brand">BidBay</a>
+    <a href="../landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
     <form action="../search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
-                   id="search-input">
+            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <select class="form-control rounded-0 col-2 " id="search-categories">
-                <option selected> All Categories</option>
+                <option selected> All Categories </option>
                 <option>Technology</option>
                 <option>Automobiles</option>
                 <option>Clothes</option>
@@ -46,24 +46,19 @@
             <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
-    <!-- mobile authentication button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
-        <span class="navbar-toggler-icon"></span>
-    </button>
     <!-- authentication links -->
-    <div class="navbar-collapse collapse justify-content-end" id="authentication">
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link text-right" href="../login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-right" href="../register.html">Register</a>
-            </li>
-        </ul>
+    <div class="dropdown" id="authentication">
+        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
+            JohnDoe39012
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
+            <a class="dropdown-item" href="#">View Profile</a>
+            <a class="dropdown-item" href="#">View Messages</a>
+            <a class="dropdown-item" href="#">Log out</a>
+        </div>
     </div>
 </nav>
-
-
 
 <div class="container" id="product-section">
     <div class="row">
