add answer button

--- a/product/product_asSeller.html
+++ b/product/product_asSeller.html
@@ -197,14 +197,19 @@
                     Are you able to deliver this with portuguese keyboard layout?
                 </dt>
                 <dd class="col-sm-6">Yes we can delivery with Portuguese keyboard layout.</dd>
+                <dt class="col-sm-6">Does it come with Linux?</dt>
+                <dd class="col-sm-6">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Place your answer"
+                               aria-label="Place your question" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button">Answer</button>
+                        </div>
+                    </div>
+                </dd>
+
             </dl>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Place your question"
-                       aria-label="Place your question" aria-describedby="basic-addon2">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button">Ask</button>
-                </div>
-            </div>
+
         </div>
 
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
