new auction dropdown

--- a/FAQ.html
+++ b/FAQ.html
@@ -44,6 +44,7 @@
                          JohnDoe39012
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
+                        <a class="dropdown-item" href="profile_page.html">New Auction</a>
                         <a class="dropdown-item" href="profile_page.html">View Profile</a>
                         <a class="dropdown-item" href="chat.html">View Messages</a>
                         <a class="dropdown-item" href="#">Log out</a>
