add partial sell page

--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -193,7 +193,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">€</span>
                         </div>
-                        <input type="text" class="form-control" aria-label="Amount (to the nearest euro)">
+                        <input type="number" class="form-control" aria-label="Amount (to the nearest euro)">
                         <div class="input-group-append">
                             <span class="input-group-text">.00</span>
                         </div>
