contact page integrated in about page

--- a/about.html
+++ b/about.html
@@ -55,18 +55,40 @@
 <div class="container">
 
     <video width="1000" height="600" autoplay>
-        <source src="media/commercial.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
+        <source src="media/commercial.mp4" type="video/mp4"> 
     </video>
 
     <h3 class="border-bottom pb-1 mb-4">About BidBay </h3>
     <p>BidBay is a website where users can do all of their shopping (new, second hand, handcrafted or miscellaneous items) where the seller is another user like them. Do you have something you want to sell? Want something from our users? Start your selling and shopping here, at BidBay! </p>
 
-    <h4 class="border-bottom pb-1 mb-4 mt-5">About the Team </h4>
-    <p>Afonso Pinto</p>
-    <p>Cristiana Ribeiro</p>
-    <p>Rostyslav Khoptiy</p>
-    <p>Tomás Oliveira</p>
+    <h4 class="border-bottom pb-1 mb-4 mt-5">Contact the Team </h4>
+
+    <table class="table table-striped table-sm table-hover table-dark">
+            <thead>
+              <tr>
+                <th scope="col">Members</th>
+                <th scope="col">Contact</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Afonso Pinto</td>
+                <td>up201503316@fe.up.pt</td>
+              </tr>
+              <tr>
+                <td>Cristiana Ribeiro</td>
+                <td>up201305188@fe.up.pt </td>
+              </tr>
+              <tr>
+                <td>Rostyslav Khoptiy</td>
+                <td> up201506219@fe.up.pt </td>
+              </tr>
+              <tr>
+                <td>Tomás Oliveira</td>
+                <td> up201504746@fe.up.pt </td>
+             </tr>
+            </tbody>
+          </table>
 
 
 </div>
