deleted table from about page

--- a/about.html
+++ b/about.html
@@ -62,42 +62,49 @@
     <p>BidBay is a website where users can do all of their shopping (new, second hand, handcrafted or miscellaneous items) where the seller is another user like them. Do you have something you want to sell? Want something from our users? Start your selling and shopping here, at BidBay! </p>
 
     <h4 class="border-bottom pb-1 mb-4 mt-5">Contact the Team </h4>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-6">
+            <p> Afonso Pinto </p>
+            <p> Cristiana Ribeiro </p>
+            <p> Rostyslav Khoptiy </p>
+            <p> Tomás Oliveira</p>
+        </div>
 
-    <table class="table table-striped table-sm table-hover table-dark">
-            <thead>
-              <tr>
-                <th scope="col">Members</th>
-                <th scope="col">Contact</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Afonso Pinto</td>
-                <td>up201503316@fe.up.pt</td>
-              </tr>
-              <tr>
-                <td>Cristiana Ribeiro</td>
-                <td>up201305188@fe.up.pt </td>
-              </tr>
-              <tr>
-                <td>Rostyslav Khoptiy</td>
-                <td> up201506219@fe.up.pt </td>
-              </tr>
-              <tr>
-                <td>Tomás Oliveira</td>
-                <td> up201504746@fe.up.pt </td>
-             </tr>
-            </tbody>
-          </table>
+        <div class="col-6">
+            <p> up201503316@fe.up.pt</p>
+            <p> up201305188@fe.up.pt  </p>
+            <p> up201506219@fe.up.pt </p>
+            <p> up201504746@fe.up.pt </p>
+            </div>
+
+
+    </div>
+</div>
+
 
 
 </div>
 <!-- footer -->
-<!-- class fixed-bottom is placed is 'stickied' to bottom of screen -->
-<nav class="navbar text-white bg-dark mt-5">
-    <ul class="nav navbar-nav mx-auto">
-        Website created by group 64 for LBAW
-    </ul>
+<!-- footer -->
+<nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
+        <ul class="nav d-flex justify-content-center">
+            <li class="nav-item active">
+                <a class="nav-link text-white" href="landing_page.html">Home </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="FAQ.html">FAQ</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
+            <li class="nav-item">
+                <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+            </li>
+        </ul>
+    </nav>
 </nav>
 </body>
 </html>
